@startuml

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "Card" as card {
  *id : BIGINT <<generated>>
  --
  *cardRank : INTEGER
  *cardSuit : INTEGER
  *handId : BIGINT <<FK>>
  roundId : BIGINT <<FK>>
}

entity "Game" as game {
  *id : BIGINT <<generated>>
  --
  *name : VARCHAR (50)
  gameState : INTEGER
  videoChatName : VARCHAR (255)
  nextGame : BIGINT <<FK>>
}

entity "Hand" as hand {
  *id : BIGINT <<generated>>
  --
  announcedScore: INTEGER
  *matchId : BIGINT <<FK>>
  *participation_id : BIGINT <<FK>>
}

entity "Match" as match {
  *id : BIGINT <<generated>>
  --
  *matchNumber : INTEGER
  *matchState: INTEGER
  *gameId : BIGINT <<FK>>
}

entity "Participation" as participation {
  *id : BIGINT <<generated>>
  --
  *active : BOOLEAN
  participationNumber : INTEGER
  *playerId : BIGINT <<FK>>
  *gameId : BIGINT <<FK>>
}

entity "Player" as player {
  *id : BIGINT <<generated>>
  --
  *name : VARCHAR(50)
}

entity "Round" as round {
  *id : BIGINT <<generated>>
  --
  *matchId : BIGINT <<FK>>
  *roundNumber : INTEGER
}

round ||..o{ card
hand ||..|{ card
participation ||..o{ hand
game |o..o| game
game ||..|{ participation
player ||..|{ participation
match ||..|{ round
game ||..|{ match

@enduml
